# ddoptim

./: .claude  CLAUDE_CODE_READY.md  COMPLETE_READY.md  PROJECT_SUMMARY.md  README.md  SETUP_COMPLETE.md  UV_SETUP.md  VISUALIZATION_READY.md  WEBER_PIGNONS_READY.md  build_network.bat  load_weber_pignons.py  package-lock.json  package.json  pyproject.toml  requirements.txt  verify.py  view_network.bat
.github/: copilot-instructions.md
commwise/blocks/: diagnostics.00100.js  diagnostics.00200.js  diagnostics.20100.js  div.00100.html  div.00105.html  div.00107.html  div.00108.html  div.00110.html  div.00200.html  div.00300.html  meta.00001.txt  meta.00002.txt  script.00050.js  script.00075.js  script.00100.js  script.00200.js  script.00300.js  script.00400.js  script.00407.js  script.00500.js  script.00600.js  script.00620.js  script.00650.js  script.00700.js  script.00800.js  script.00900.js  script.00905.js  script.00910.js  script.00915.js  (+25 more)
config/: commwise.example.json  commwise.json
core/: __init__.py  buffer_profile.py  network.py  network_node.py
data/: weber_pignons_network.json
docs/: DDoptim_Design_Update_2025-02-04.md  commwise_api_cheatsheet.md  commwise_mcp_overview_instructions.md  required_lead_time_algorithm.md  scenario_management_design_v2.md
examples/: README.md  create_weber_pignons.py
scripts/: preview.js  sync-pack.js  sync-pull-live.js  sync-pull.js  sync-push.js  utils.js
src/: commwise-blocks.js
tests/: commwise-blocks.test.js  test_adu_propagation.py  test_core_simple.py
visualization/: README.md  __init__.py  network_viewer.py
