[project]
name = "ddoptim"
version = "0.1.0"
description = "DDMRP Buffer Positioning Optimizer - Research tool for automated buffer positioning in supply chains"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Rémi Lequette"}
]
dependencies = [
    "networkx>=3.0",
    "dash>=2.14.0",
    "plotly>=5.17.0",
    "dash-bootstrap-components>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Repository = "https://github.com/yourusername/ddoptim"
Documentation = "https://github.com/yourusername/ddoptim/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.uv]
dev-dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
